--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,10 +17,9 @@
     padding: 1rem;
     font-size: 1.25rem;
     background-color: #60a5fa;
-    color: white;
+    color: black;
     border-radius: 0.375rem;
     font-weight: 500;
-    transition: background-color 0.3s ease;
   }
   
   .nav-button:hover {
@@ -36,7 +35,7 @@
   }
   
   .drop-down:hover {
-    background-color: #2563eb; /* hover:bg-blue-500 */
+    background-color: #2563eb;
   }
   
   .drop-down-position {
